Update README.md with comprehensive documentation